# trade_program_gold_vs_dollar

./: .gitignore  PLAN.md  README.md  pyproject.toml
configs/: config.yaml  config_RANGE.yaml  config_TREND.yaml  config_ablation_nofilters.yaml  config_smoke_baseline.yaml  config_target_4_8.yaml  config_v3_AUTO.yaml  config_v3_AUTO_EXP_A.yaml  config_v3_AUTO_EXP_B.yaml  config_v3_AUTO_EXP_B_COSTP20.yaml  config_v3_AUTO_EXP_B_COSTP50.yaml  config_v3_AUTO_EXP_C.yaml  config_v3_PIVOT_B1.yaml  config_v3_PIVOT_B2.yaml  config_v3_PIVOT_B3.yaml  config_v3_PIVOT_B4.yaml  config_v3_RANGE.yaml  config_v3_ROUTE_A.yaml  config_v3_ROUTE_A_H13_H8.yaml  config_v3_TREND.yaml  iter1.yaml  iter2.yaml
data/: sample_m5.csv  xauusd_m5_HOLDOUT20.csv
docs/: ABLAT_summary.md  B4_DEV_HEALTH_2021_2023.md  BASELINES.md  COST_SENSITIVITY_ATTRIBUTION.md  COST_SENSITIVITY_ATTRIBUTION_ROUTEA_W4.md  COST_STRESS.md  DATASETS.md  DIAGNOSIS_LAST_RUN.md  EDGE_DISCOVERY_OVERNIGHT.md  EDGE_DISCOVERY_ROUND2.md  EDGE_DISCOVERY_ROUND3_PLAN.md  EDGE_DISCOVERY_WORKFLOW.md  EDGE_FACTORY_DEV_FAST_DECISION.md  EDGE_FACTORY_GATES.md  EDGE_FACTORY_MVP_DECISION.md  EDGE_FACTORY_PIPELINE.md  EDGE_LOSS_DELTA.md  GO_NO_GO.md  HOLDOUT_QA.csv  HOLDOUT_REPORT.md  HOLDOUT_SPLIT.md  LATEST_COMMIT.md  MODE_SWITCH_MAP.md  NEXT_PHASE_BRIEF.md  NEXT_STEPS_TOMORROW.md  NEXT_STEPS_TOMORROW_ROUND2.md  PIVOT_B4_QA.csv  PIVOT_PLAN_TREND_OR_MR.md  PIVOT_SCOREBOARD.md  POSTHOC_COST_STRESS.md  QA_CHECKLIST.md  RANGE_EDGE_VALIDATION.md  RANGE_vs_TREND_DELTA.md  REPORT_DIAGNOSTICS_AUDIT.md  REPRO_RUNS.md  REPRO_STEPS.md  (+34 more)
(+249 files in other folders)
